--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion "33.0.0"
+    namespace = "com.mone.rtmp_exoplayer"
+    compileSdkVersion 34
 
     defaultConfig {
         applicationId "com.mone.rtmp_exoplayer"
         minSdkVersion 16
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -50,10 +50,11 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
 
     //region ExoPlayer
-    def exoplayerVersion = '2.18.0'
-    implementation("com.google.android.exoplayer:exoplayer-core:$exoplayerVersion")
-    implementation("com.google.android.exoplayer:exoplayer-ui:$exoplayerVersion")
-    implementation("com.google.android.exoplayer:extension-rtmp:$exoplayerVersion")
+    def media3_version = '1.1.1'
+    implementation("androidx.media3:media3-exoplayer:$media3_version")
+    implementation("androidx.media3:media3-ui:$media3_version")
+    implementation("androidx.media3:media3-exoplayer-rtsp:$media3_version")
+    implementation("androidx.media3:media3-datasource-rtmp:$media3_version")
     //endregion
 
     testImplementation 'junit:junit:4.13.2'
